tests/cases/standard-library/errors/prelude-move-borrow-result.ari
fn main() -> i64 {
  let value = 1;
  let borrowed = move(ref value);
  return 0;
}
